--- a/datacleansing.ipynb
+++ b/datacleansing.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "4  b0eb4c68-5737-4076-856d-7eacf2e6014d               Oxygen  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "4               Oxygen  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "Name: products, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,18 +313,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "967\n",
-      "821\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spo = orders[~orders.str.contains(', ')]\n",
     "mpo = orders[orders.str.contains(', ')]\n",
@@ -332,52 +323,39 @@
     "mpoconverted = mpo.str.split(pat=', ').explode()\n",
     "\n",
     "total = pd.concat([spo, mpoconverted], ignore_index=True)\n",
-    "total.str.lower()"
+    "total = total.str.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "octinoxate                         35\n",
-       "acetaminophen                      34\n",
-       "titanium dioxide                   29\n",
-       "avobenzone                         19\n",
-       "alcohol                            18\n",
-       "                                   ..\n",
-       "ampicillin sodium                   1\n",
-       "armodafinil                         1\n",
-       "dabrafenib                          1\n",
-       "sulfacetamide sodium and sulfur     1\n",
-       "thymol                              1\n",
-       "Name: products, Length: 767, dtype: int64"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "total.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "octinoxate                         35\n",
+      "acetaminophen                      34\n",
+      "titanium dioxide                   29\n",
+      "avobenzone                         19\n",
+      "alcohol                            18\n",
+      "                                   ..\n",
+      "ampicillin sodium                   1\n",
+      "armodafinil                         1\n",
+      "dabrafenib                          1\n",
+      "sulfacetamide sodium and sulfur     1\n",
+      "thymol                              1\n",
+      "Name: products, Length: 767, dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -395,7 +373,8 @@
     }
    ],
    "source": [
-    "total.value_counts()[0:4].plot(kind='barh')\n"
+    "print(total.value_counts())\n",
+    "total.value_counts()[0:4].plot(kind='barh')"
    ]
   }
  ],
