--- a/datacleansing.ipynb
+++ b/datacleansing.ipynb
@@ -297,9 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gross.\n",
-    "\n",
-    "First glance we have lists of products within the orders, delimited by ','. Some entries have 'and' but that seems to be part of the name of product, such as 'Glipizide and Metformin Hydrochloride' which is single diabetes medication or 'Amoxicillin and Clavulanate Potassium' which is another single anti-infection medication.\n",
+    "From what we have, I'm going to make the assumption that our dataset are orders by patients from a pharmacy. The order records seem to be mixed in single item orders and multiple item orders delimited by ','. Some entries have 'and' but that seems to be part of the name of product, such as 'Glipizide and Metformin Hydrochloride' which is single diabetes medication or 'Amoxicillin and Clavulanate Potassium' which is another single anti-infection medication.\n",
     "\n",
     "__Assuming onwards that multiple products will be delimited by commas and not 'and'.__\n",
     "\n",
